Changelog for mk-slave-delay:

2008-12-01: version 1.0.10

   * Updates to shared code.

2008-09-19: version 1.0.9

   * Updates to shared code.
   * Made debugging code more efficient in non-debug mode.

2008-08-11: version 1.0.8

   * Files downloaded directly from SVN crashed due to version information.

2008-06-02: version 1.0.7

   * Updated the documentation to use POD.
   * The slave could wait forever if the I/O thread was stopped.
   * The slave could wait forever on the master's last event (bug #1959496).

2008-03-16: version 1.0.6

   * Added --setvars option (bug #1904689, bug #1911371).
   * Added 'A' part to DSNs (bug #1877548).

2008-01-05: version 1.0.5

   * Made suffixes for time options optional (bug #1858696).
   * The program was ignoring some connection parameters.
   * Made the program use master when the I/O thread waits for relay log space.

2007-12-16: version 1.0.4

   * Updated common code, added debugging.

2007-12-07: version 1.0.3

   * Updated common code.

2007-11-04: version 1.0.2

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.

2007-09-20: version 1.0.1

   * Added a --daemonize option to detach from the shell and run in the background.

2007-08-23: version 1.0.0

   * MySQL socket connection option didn't work.
   * Added a check that the server is a slave.

2007-08-04: version 0.9.0

   * Initial release.